codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__feedback_view__tests__feedback_view_good_result.snap
---
source: tui_app_server/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ Tell us more (good result)
▌
▌ (optional) Write a short description to help us further

按  enter 确 认 ， 按  esc 返 回
