codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__feedback_view__tests__feedback_view_other.snap
---
source: tui_app_server/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ 补 充 说 明 （ 其 他 ）
▌
▌ （ 可 选 ） 写 几 句 补 充 说 明 ， 帮 助 我 们 进 一 步 了 解 情 况

按  enter 确 认 ， 按  esc 返 回
